[tool.poetry]
name = "Corpus Tools"
version = "0.1.0"
description = ""
authors = ["Benjamin Murauer <b.murauer@posteo.de>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
tqdm = "^4.54.1"
numpy = "^1.19.4"
pandas = "^1.1.5"
hoep = "^1.0.2"
lxml = "^4.6.2"
bs4 = "^0.0.1"
click = "^7.1.2"
tuhlbox = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
